--- a/templates/pve_comp/pve_comp.html
+++ b/templates/pve_comp/pve_comp.html
@@ -5,8 +5,9 @@
 {% block title %}pve_comp{% endblock %}
 
 {% block content %}
-<div class="upload_container">
+<div class="container">
     <h1>pve_comp</h1>
+    <a href="{% url 'pve_comp:upload' %}">アップロード</a>
 </div>
 {% endblock %}
 
