--- a/templates/pve_comp/pve_comp.html
+++ b/templates/pve_comp/pve_comp.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <h1>pve_comp</h1>
-    <a href="{% url 'pve_comp:pve_comp' %}">アップロード</a>
+    <a href="{% url 'pve_comp:upload' %}">アップロード</a>
 </div>
 {% endblock %}
 
