chapter stage選択で画像表示

--- a/templates/pve_comp/pve_comp.html
+++ b/templates/pve_comp/pve_comp.html
@@ -8,6 +8,10 @@
 <div class="container">
     <h1>pve_comp</h1>
     <a href="{% url 'pve_comp:upload' %}">アップロード</a>
+    <form method="GET" action="{% url 'pve_comp:result' %}">
+    {{form.as_p}}
+    <button type="submit">検索</button>
+    </form>
 </div>
 {% endblock %}
 
