アップロード後に完了コメントの追加

--- a/templates/index/base.html
+++ b/templates/index/base.html
@@ -19,6 +19,13 @@
             <p>{% user_display user %}</p>
             <a href="{% url 'account_login' %}">ログイン</a>
         </header>
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </ul>
+        {% endif %}
         {% block content%}{% endblock %}
         <footer>
             <div class="footer-widgets-container">
