--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -7,8 +7,8 @@
 <nav class="menubar">
     <ul>
         <li><a href="{% url 'pve_comp:pve_comp' %}">pve comp</a></li>
-        <li><a href="{% url 'translate:translate' %}">transelate</a></li>
-        <li><a href="#mythic_manage">mythic manage</a></li>
+        <li><a href="#">transelate</a></li>
+        <li><a href="#">mythic manage</a></li>
     </ul>
 </nav>
 
